cluster/apps/media/deemix/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deemix
  namespace: media
spec:
  selector:
    matchLabels:
      app: deemix
  template:
    metadata:
      labels:
        app: deemix
    spec:
      containers:
      - name: deemix
        image: registry.gitlab.com/bockiii/deemix-docker:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 6595
          name: deemix
        volumeMounts:
          - mountPath: /config
            name: deemix-config
          - mountPath: /downloads
            name: media
      volumes:
        - name: deemix-config
          persistentVolumeClaim:
            claimName: deemix-config
        - name: media
          nfs:
            path: /mnt/user/Media/music
            server: tower.${DOMAIN}
      nodeSelector:
        node-role.kubernetes.io/worker: worker
