cluster/apps/media/deemix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deemix
  namespace: media
spec:
  selector:
    app: deemix
  ports:
  - port: 6595
    targetPort: deemix
