cluster/apps/media/deemix/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deemix
  namespace: media
  labels:
    name: deemix
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: ${CLUSTER_ISSUER}
spec:
  rules:
  - host: deemix.${DOMAIN}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: deemix
            port: 
              number: 6595
  tls:
    - hosts:
      - deemix.${DOMAIN}
      secretName: deemix-cert
